[project]
name = "recammaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.0+cu118",
    "torchvision",
    "torchaudio",
    "cupy-cuda12x",
    "transformers==4.46.2",
    "controlnet-aux==0.0.7",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "sentencepiece",
    "protobuf",
    "modelscope",
    "ftfy",
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" }
]
torchvision = [
  { index = "pytorch-cu118" }
]
torchaudio = [
  { index = "pytorch-cu118" }
]
